[package]
name = "clink"
version = "0.1.0"
edition = "2021"
authors = ["keating"]
description = "create [hardlinks or symbolic links] of [files or directory]  to current driver tmp"
license = "Apache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"